# summarizer

./: README.md  SLACK_APP_CONFIG.md  package-lock.json  pyproject.toml  requirements.txt  test_bot.py
